# jax-fusion

./: README.md  install.sh  pyproject.toml
src/jax_fusion/: __init__.py  diffusion.py  generate.py  vae.py
src/jax_fusion/datasets/: celeb_a.py  fashion_mnist.py  oxford_iiit_pet.py
src/jax_fusion/modules/: pos_emb.py  rope.py  unet.py
