[project]
name = "jax-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "tensorflow>=2.20.0",
]

[tool.poetry]
packages = [{ include = "jax_fusion", from = "src" }]

[project.scripts]
jax-fusion = "jax_fusion:main"
