[project]
name = "jax-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flax>=0.12.0",
    "gdown>=5.2.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "torchvision>=0.23.0",
]

[tool.poetry]
packages = [{ include = "jax_fusion", from = "src" }]

[project.scripts]
jax-fusion = "jax_fusion:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["jax_fusion*"]
